Add File changes

--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -13,7 +13,7 @@
       <p class="card-text">Owned by <i><%= listing.owner.username %></i></p>
       <p class="card-text"><%= listing.description%></p>
       <p class="card-text">&#8377;<%= listing.price.toLocaleString("en-IN")%></p>
-      <p class="card-text"></p><%= listing.location%></p>
+      <p class="card-text"><%= listing.location%></p>
       <p class="card-text"> <%= listing.country%></p>
     </div>
   </div>
@@ -52,7 +52,7 @@
   >
     <div class="mb-3 mt-3">
     <label for="rating" class="form-label">Rating</label>
-    <fieldset class="starability-fade">
+    <fieldset class="starability-slot">
       <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="0" checked aria-label="No rating." />
       <input type="radio" id="first-rate1" name="review[rating]" value="1" />
       <label for="first-rate1" title="Terrible">1 star</label>
@@ -105,8 +105,3 @@
    <% } %>
   </div>
 </div>
-
-<!-- 
-  <% if(listing.price != null && !isNaN(listing.price)) {%>
-              &#8377;<%= listing.price.toLocaleString("en-IN")%>/night<br />
-              <% } %> -->
