--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -93,6 +93,28 @@
     </div>
     
 
+
+
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="..." class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="..." class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="..." class="d-block w-100" alt="...">
+        </div>
+      </div>
+    </div>
+
+
+
+
+
+
+
     <div class="tax-toggle">
       <div class="form-check-reverse form-switch">
         <input
