--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,17 +1,34 @@
 <% layout("/layouts/boilerplate") %>
 <body>
   <style>
+    /*  Horizontal Scrolling Menu */
+
     .filters {
+      white-space: nowrap;
+      overflow-x: auto;
+      background: #f0f0f0;
+      padding: 10px 0;
       display: flex;
-      flex-wrap: wrap;
       align-items: center;
+      justify-content: space-between;
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+    }
+    .filter i{
+      font-size: 1.5rem;
     }
     .filter {
-      margin-top: 1rem;
+      display: inline;
       text-align: center;
-      margin-right: 2rem;
-      margin-top: 2rem;
-      opacity: 0.7;
+      padding: 10px 20px;
+      margin: 0 10px;
+      font-size: 20px;
+      background: #fff;
+      box-shadow: 1 2px 5px rgba(0,0,0,0.1);
+      border-radius: 20px;
+    }
+    .filters::-webkit-scrollbar {
+      display: none;
     }
     .filter:hover {
       opacity: 1;
@@ -19,114 +36,117 @@
     }
     .filter p {
       font-size: 0.8rem;
+      color: #333;
     }
 
-    .tax-info {
-      display: none;
+    .carousel-inner img{
+      width: 100%;
+      height: 30rem;
+      object-fit: cover;
     }
-    .tax-toggle {
-      border: 1px solid black;
-      border-radius: 1rem;
-      height: 2.5rem;
-      padding: 1rem;
-      margin-left: 4rem;
-      display: flex;
-      align-items: center;
-    }
+
+    
+
   </style>
-  <div class="filters">
-    <div class="filter">
+
+
+  <!-- Horizontal Scrolling Menu -->
+
+  <div class="filters" id="filters">
+    <div class="filter ">
       <div><i class="fa-solid fa-fire"></i></div>
       <p>Trending</p>
     </div>
-    <div class="filter">
+    <div class="filter ">
       <div><i class="fa-solid fa-bed"></i></div>
       <p>Rooms</p>
     </div>
-    <div class="filter">
+    <div class="filter ">
       <div><i class="fa-solid fa-mountain-city"></i></div>
       <p>Iconic Cities</p>
     </div>
-    <div class="filter">
+    <div class="filter ">
       <div><i class="fa-solid fa-mountain-sun"></i></div>
       <p>Mountain</p>
     </div>
-    <div class="filter">
+    <div class="filter ">
       <div><i class="fa-brands fa-fort-awesome"></i></div>
       <p>Castles</p>
     </div>
-    <div class="filter">
+    <div class="filter ">
       <div><i class="fa-solid fa-person-swimming"></i></div>
       <p>Amazing Pools</p>
     </div>
-    <div class="filter">
+    <div class="filter ">
       <div><i class="fa-solid fa-tractor"></i></div>
       <p>Farms</p>
     </div>
-    <div class="filter">
+    <div class="filter ">
       <div><i class="fa-solid fa-landmark-dome"></i></div>
       <p>Historical Homes</p>
     </div>
-    <div class="filter">
+    <div class="filter ">
       <div><i class="fa-solid fa-campground"></i></div>
       <p>Camping</p>
     </div>
-    <div class="filter">
+    <div class="filter ">
       <div><i class="fa-solid fa-snowman"></i></div>
       <p>Arctic</p>
     </div>
-    <div class="filter">
+    <div class="filter ">
       <div><i class="fa-solid fa-umbrella-beach"></i></div>
       <p>Beach</p>
     </div>
-    <div class="filter">
+    <div class="filter ">
       <div><i class="fa-solid fa-house-user"></i></div>
       <p>Tiny Homes</p>
     </div>
-    <div class="filter">
+    <div class="filter ">
       <div><i class="fa-solid fa-igloo"></i></div>
       <p>Domes</p>
     </div>
-    <div class="filter">
+    <div class="filter ">
       <div><i class="fa-solid fa-sailboat"></i></div>
       <p>Boats</p>
     </div>
+  </div>
 
-    <div
-      id="carouselExampleSlidesOnly"
+<!-- IMAGE SLIDER -->
+  <div
+      id="carouselExampleInterval"
       class="carousel slide"
       data-bs-ride="carousel"
     >
       <div class="carousel-inner">
-        <div class="carousel-item active">
+        <div class="carousel-item active" data-bs-interval="3000">
           <img
             src="https://images.unsplash.com/photo-1499591934245-40b55745b905?q=80&w=2072&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
             class="d-block w-100"
             alt="..."
           />
         </div>
-        <div class="carousel-item">
+        <div class="carousel-item" data-bs-interval="3000">
           <img
             src="https://plus.unsplash.com/premium_photo-1664304598312-6de674eb1b79?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
             class="d-block w-100"
             alt="..."
           />
         </div>
-        <div class="carousel-item">
+        <div class="carousel-item" data-bs-interval="3000">
           <img
             src="https://images.unsplash.com/photo-1469854523086-cc02fe5d8800?q=80&w=1121&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
             class="d-block w-100"
             alt="..."
           />
         </div>
-        <div class="carousel-item">
+        <div class="carousel-item" data-bs-interval="3000">
           <img
             src="https://images.unsplash.com/photo-1419133126304-d17b34c34d76?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
             class="d-block w-100"
             alt="..."
           />
         </div>
-        <div class="carousel-item">
+        <div class="carousel-item" data-bs-interval="3000">
           <img
             src="https://images.unsplash.com/photo-1501966077470-d1ebf6cd871a?q=80&w=1031&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
             class="d-block w-100"
@@ -134,22 +154,17 @@
           />
         </div>
       </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
 
-    <div class="tax-toggle">
-      <div class="form-check-reverse form-switch">
-        <input
-          class="form-check-input"
-          type="checkbox"
-          role="switch"
-          id="flexSwitchCheckDefault"
-        />
-        <label class="form-check-label" for="flexSwitchCheckDefault"
-          >Display total after taxes</label
-        >
-      </div>
-    </div>
-  </div>
+
   <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-3">
     <% for(let listing of allListings){ %>
     <a href="/listings/<%= listing._id%>" class="listing-link">
@@ -166,8 +181,8 @@
         <div class="card-body ms-3">
           <p class="card-text">
             <b><%=listing.title %></b> <br />
-            &#8377;<%= listing.price.toLocaleString("en-IN")%>/night<br />
-            <i class="tax-info">&nbsp;&nbsp;+18% GST</i>
+            <p><%= listing.location %>, <%= listing.country %></p>
+            <p><i class="fa-solid fa-signs-post"><%= listing.owner.username %></i></p>
           </p>
         </div>
       </div>
@@ -175,17 +190,3 @@
     <% } %>
   </div>
 </body>
-
-<script>
-  let taxSwitch = document.getElementById("flexSwitchCheckDefault");
-  taxSwitch.addEventListener("click", () => {
-    let taxInfo = document.getElementsByClassName("tax-info");
-    for (info of taxInfo) {
-      if (info.style.display != "inline") {
-        info.style.display = "inline";
-      } else {
-        info.style.display = "none";
-      }
-    }
-  });
-</script>
