--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -22,7 +22,7 @@
 <nav class="navbar navbar-expand-md border-bottom sticky-top">
   <div class="container-fluid bg-light">
     <a class="navbar-brand" href="/listings">
-      <i class="fa-solid logo fa-globe"></i>
+      <i class="fa-solid logo fa-globe">TripTales.in</i>
     </a>
     <button
       class="navbar-toggler"
@@ -40,10 +40,11 @@
         <a class="nav-link m-2" href="/listings">Explore TripTales</a>
       </div>
       <div class="navbar-nav ms-auto">
-        <form class="d-flex" role="search">
+        <form class="d-flex" role="search" action="/listings/search" method="GET">
           <input
             class="form-control me-2 search-inp"
             type="search"
+            name="query"
             placeholder="Search Destination"
           />
           <button class="btn btn-search btn-search" type="submit">
@@ -52,7 +53,7 @@
         </form>
       </div>
       <div class="navbar-nav ms-auto">
-        <a class="nav-link m-2" href="/listings/new"><strong>TripTales your home</strong></a>
+        <a class="nav-link m-2" href="/listings/new"><strong>TripTales Your Home </strong></a>
         <% if(!currUser) { %>
         <a class="nav-link m-2" href="/signup"><i class="fa-solid fa-user-plus">SignUp</i></a>
         <a class="nav-link m-2" href="/signin"><i class="fa-solid fa-right-to-bracket">SignIn</i></a>
