--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -42,15 +42,15 @@
       </div>
       <div class="row">
         <div class="mb-3 col-md-4">
-          <label for="price" class="form-label">Price</label>
+          <label for="location" class="form-label">Location</label>
           <input
-            name="listing[price]"
+            name="listing[location]"
+            value="<%= listing.location %>"
             class="form-control"
-            value="<%= listing.price %>"
-            type="number"
+            type="text"
             required
           />
-          <div class="invalid-feedback">Please enter a valid price!</div>
+          <div class="invalid-feedback">Location should be valid!</div>
         </div>
 
         <div class="mb-3 col-md-8">
@@ -66,16 +66,18 @@
         </div>
       </div>
       <div class="mb-3">
-        <label for="location" class="form-label">Location</label>
+        <label for="category" class="form-label">Category</label>
         <input
-          name="listing[location]"
-          value="<%= listing.location %>"
-          class="form-control"
+          name="listing[category]"
+          placeholder="Enter Category"
           type="text"
+          class="form-control"
+          value="<%= listing.category %>"
           required
         />
-        <div class="invalid-feedback">Location should be valid!</div>
+        <div class="invalid-feedback">Enter Category of this Location</div>
       </div>
+     
       <button class="btn btn-dark edit-btn mt-3">Edit</button>
     </form>
   </div>
