--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,7 +1,7 @@
 <% layout("/layouts/boilerplate") %>
 <div class="row mt-3">
   <div class="col-8 offset-2">
-    <h2>Create a new Listing</h2>
+    <h2 class="fw-bold">Add Your Favorite Place</h2>
     <form
       method="POST"
       action="/listings"
@@ -41,16 +41,16 @@
       </div>
       <div class="row">
         <div class="mb-3 col-md-4">
-          <label for="price" class="form-label">Price</label>
-          <input
-            name="listing[price]"
-            placeholder="Enter price"
-            type="number"
-            class="form-control"
-            required
-          />
-          <div class="invalid-feedback">Please enter a valid price!</div>
-        </div>
+        <label for="location" class="form-label">Location</label>
+        <input
+          name="listing[location]"
+          placeholder="Enter location"
+          type="text"
+          class="form-control"
+          required
+        />
+        <div class="invalid-feedback">Location should be valid!</div>
+      </div>
 
         <div class="mb-3 col-md-8">
           <label for="country" class="form-label">Country</label>
@@ -64,20 +64,19 @@
           <div class="invalid-feedback">Country name should be valid!</div>
         </div>
       </div>
-
       <div class="mb-3">
-        <label for="location" class="form-label">Location</label>
+        <label for="category" class="form-label">Category</label>
         <input
-          name="listing[location]"
-          placeholder="Enter location"
+          name="listing[category]"
+          placeholder="Enter Category"
           type="text"
           class="form-control"
           required
         />
-        <div class="invalid-feedback">Location should be valid!</div>
+        <div class="invalid-feedback">Enter Category of this Location</div>
       </div>
 
-      <button class="btn mt-3 btn-dark add-btn">Add</button>
+      <button class="btn mt-3 btn-dark col-3 add-btn">Add</button>
       <br />
     </form>
   </div>
