--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,7 +1,7 @@
 <% layout("/layouts/boilerplate") %>
 <div class="row mt-3">
   <div class="col-8 offset-3">
-    <h3><%= listing.title%></h3>
+    <h3 class="fw-bold"><%= listing.title%></h3>
   </div>
   <div class="card listing-card col-6 offset-3 show-card">
     <img
@@ -10,11 +10,11 @@
       alt="Listing_image"
     />
     <div class="card-body">
-      <p class="card-text">Owned by <i><%= listing.owner.username %></i></p>
+      <p class="card-text">Owned by @<code><%= listing.owner.username %></code></p>
       <p class="card-text"><%= listing.description%></p>
-      <p class="card-text">&#8377;<%= listing.price.toLocaleString("en-IN")%></p>
       <p class="card-text"><%= listing.location%></p>
       <p class="card-text"> <%= listing.country%></p>
+      <p class="card-text"> Category :<%= listing.category %></p>
     </div>
   </div>
 </div>
@@ -93,7 +93,7 @@
       <p class="starability-result card-text" data-rating="<%= review.rating %>"><%= review.rating %> stars</p>
       <p class="card-text"><%= review.comment %></p>
       
-      <% if(urrUser && review.author._id.equals(currUser._id)) { %>
+      <% if(currUser && review.author._id.equals(currUser._id)) { %>
       <form
         class="mb-3"
         method="POST"
