--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -53,7 +53,7 @@
         </form>
       </div>
       <div class="navbar-nav ms-auto">
-        <a class="nav-link m-2" href="/listings/new"><strong>TripTales Your Home </strong></a>
+        <a class="nav-link m-2" href="/listings/new"><strong><i class="fa-solid fa-upload ">Upload</i> </strong></a>
         <% if(!currUser) { %>
         <a class="nav-link m-2" href="/signup"><i class="fa-solid fa-user-plus">SignUp</i></a>
         <a class="nav-link m-2" href="/signin"><i class="fa-solid fa-right-to-bracket">SignIn</i></a>
