--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -12,6 +12,13 @@
     display: inline;
     margin-right: 0.5rem;
   }
+  .navbar{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+  }
   search-inp{
     border: 20px;
     padding: 0.5rem 3rem 0.5rem  3rem;
@@ -19,7 +26,7 @@
   }
 </style>
 
-<nav class="navbar navbar-expand-md border-bottom sticky-top">
+<nav class="navbar  border-bottom sticky-top">
   <div class="container-fluid bg-light">
     <a class="navbar-brand" href="/listings">
       <i class="fa-solid logo fa-globe">TripTales.in</i>
@@ -46,9 +53,10 @@
             type="search"
             name="query"
             placeholder="Search Destination"
+            autocomplete="off" 
           />
           <button class="btn btn-search btn-search" type="submit">
-            <i class="fa-solid fa-magnifying-glass"></i> Search
+            <i class="fa-solid fa-magnifying-glass">Search</i>
           </button>
         </form>
       </div>
