--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,17 +1,35 @@
 body{
-    font-family: "Plus Jakarta Sans", sans-serif !important;
+    font-family: cursive !important;
     display: flex;
+    justify-content: center;
     flex-direction: column;
     min-height: 100vh;
+    min-width: 500px;
+}
+
+body{
+    padding-top: 70px;
 }
 
 .container{
-    flex:1;
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 15px;
+}
+
+@media screen and(max-width:576px) {
+    body{
+        min-width: 200px;
+    }
+    .container{
+        padding: 10px;
+    }
 }
 /* navbar */
 .navbar{
     height: 5rem;
-    background-color: #fff;
+    background-color: hsl(0, 100%, 99%);
 }
 .fa-compass{
     color: rgb(193, 91, 73);
@@ -97,6 +115,8 @@ body{
 .edit-btn{
     background-color: #fe424d !important;
     border: none !important;
+    height: 50px;
+    width: 100px ;
 }
 
 /* show img */
