--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -22,8 +22,8 @@
 <div class="btns">
   <a
     href="/listings/<%=listing._id%>/edit"
-    class="btn btn-dark col-1 edit-btn offset-3"
-    >Edit</a
+    class="btn btn-danger offset-3"
+    ><button class="btn btn-danger">EDIT</button></a
   >
 
   <form
@@ -50,11 +50,12 @@
     novalidate
     class="needs-validation"
   >
+  <!-- stars -->
     <div class="mb-3 mt-3">
     <label for="rating" class="form-label">Rating</label>
     <fieldset class="starability-slot">
       <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="0" checked aria-label="No rating." />
-      <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+      <input type="radio" id="first-rate1" name="review[rating]" value="1" required/>
       <label for="first-rate1" title="Terrible">1 star</label>
       <input type="radio" id="first-rate2" name="review[rating]" value="2" />
       <label for="first-rate2" title="Not good">2 stars</label>
@@ -66,7 +67,7 @@
       <label for="first-rate5" title="Amazing">5 stars</label>
     </fieldset>
   </div>
-    
+    <!-- comments -->
     <div class="mt-3 mb-3">
       <label for="Comment" class="form-label">Comments</label>
       <textarea
@@ -88,20 +89,23 @@
 
   <div class="row">
     <% for(review of listing.reviews) {%>
-    <div class="card col-5 ms-3 mb-3">
-      <h5 class="card-title">@<%= review.author.username  %></h5>
-      <p class="starability-result card-text" data-rating="<%= review.rating %>"><%= review.rating %> stars</p>
-      <p class="card-text"><%= review.comment %></p>
-      
-      <% if(currUser && review.author._id.equals(currUser._id)) { %>
-      <form
-        class="mb-3"
-        method="POST"
-        action="/listings/<%= listing._id  %>/reviews/<%= review._id  %>?_method=DELETE"
-      >
-        <button class="btn btn-dark">Delete</button>
-      </form>
-      <% } %>
+    <div class="col-12 col-md-5 col-lg-4 mb-3">
+      <div class="card p-2">
+        <div class="card-body">
+          <h5 class="card-title">@<%= review.author.username  %></h5>
+          <p class="starability-result card-text" data-rating="<%= review.rating %>"><%= review.rating %> stars</p>
+          <p class="card-text"><%= review.comment %></p>
+          
+          <% if(currUser && review.author._id.equals(currUser._id)) { %>
+          <form
+            method="POST"
+            action="/listings/<%= listing._id  %>/reviews/<%= review._id  %>?_method=DELETE"
+          >
+            <button class="btn btn-dark">Delete</button>
+          </form>
+          <% } %>
+        </div>
+      </div>
     </div>
    <% } %>
   </div>
